--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -1,50 +1,33 @@
-<ion-header [translucent]="true">
-</ion-header>
-
-
-
-<ion-content [fullscreen]="true" class="padding">
-  <div class="container">
-
-    <div class="card-container">
-
-      <ion-card class="custom-card">
-
-        <img src="assets/user.png" alt="Icono de Usuario"
-          class="centered-image">
-
-        <ion-card-header>
-
-          <ion-card-title>Inicio de sesión</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <div class="example-container">
-            <mat-form-field style="width: 250px;">
-              <mat-label>Ingresa tu Correo:</mat-label>
-              <input  matInput placeholder="pat@example.com" [formControl]="email" required name="gmail"
-                [(ngModel)]="gmail">
-              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-            </mat-form-field>
-          </div>
-          <div class="example-container">
-            <mat-form-field>
-              <mat-label>Ingresa tu contraseña:</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********" name="password"
-                [(ngModel)]="password">
-              <button style="color: white;" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-              </button>
-            </mat-form-field>
-            <br>
-          </div>
-          <ion-button (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
-          <br>
-          <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1><br>
-          <p1 [routerLink]="['/recuperar-clave']">¿Se le olvidó la contraseña? Ingrese aquí</p1>
-        </ion-card-content>
-      </ion-card>
+<ion-content [fullscreen]="true">
+  <ion-card>
+    <!--LOGO DE USUARIO-->
+    <img src="assets/user.png" alt="Icono de Usuario" class="centered-image">
+    <!---->
+    <ion-card-header>
+      <!--CORREO-->
+      <div class="example-container">
+        <mat-form-field style="width: 250px;">
+          <mat-label>Ingresa tu Correo:</mat-label>
+          <input matInput placeholder="pat@example.com" required name="gmail" [(ngModel)]="gmail">
+          <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+      </div>
+    </ion-card-header>
+    <!--CONTRASEÑA-->
+    <div class="example-container2">
+      <mat-form-field>
+        <mat-label>Ingresa tu contraseña:</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********" name="password"
+          [(ngModel)]="password">
+        <button style="color: white;" mat-icon-button matSuffix (click)="hide = !hide"
+          [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
-
-  </div>
+    <!--BOTON-->
+    <ion-button (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
+    <!--MENSAJITO PARA SABER SI TIENE O NO UNA CUENTA-->
+    <p>¿Aún no tiene una cuenta?<a [routerLink]="['/registro']">Registrese</a></p>
+  </ion-card>
 </ion-content>
