--- a/src/app/pages/Shop/tienda/tienda.page.scss
+++ b/src/app/pages/Shop/tienda/tienda.page.scss
@@ -25,7 +25,7 @@ ion-card {
         }
     }
 }
-//RESTO DEL CODIGO
+//RESTO DEL CODIGO de las card de los productos
 
 ion-grid {
     ion-row {
@@ -67,7 +67,7 @@ p {
 
 ion-card-title {
     color: white;
-    font-size: 60px;
+    font-size: 50px;
     margin: 5px;
     text-align: center;
     font-family: 'DM Serif Display', serif;
@@ -79,56 +79,48 @@ ion-card-title {
     text-align: center;
     margin: 5px;
 }
-@media(width:423px){
+@media(width:412px){
     ion-title{
-        font-size: 40px;
+        font-size: 30px;
     }
     ion-card-title{
         font-size: 30px;
     }
+    ion-img {
+        width: 250px;
+        height: 250px;
+    }
     
-
+    ion-grid {
+        ion-row {
+            display: flex;
+            justify-content: center;
+            /* Centrar horizontalmente */
+            margin: 0 auto;
+            /* Margen superior e inferior igual a 0 y margen lateral automático para centrar en el medio */
+    
+            ion-card {
+                margin: 10px;
+                /* Margen entre las tarjetas */
+                max-width: 250px;
+                /* Ancho máximo de las tarjetas */
+    
+                ion-img.img-container {
+                    max-width: 70%;
+                    /* Asegurarse de que la imagen no exceda el ancho de la tarjeta */
+                    height: auto;
+                    /* Mantener la proporción de aspecto */
+                }
+            }
+        }
+    }
 }
+//FONDO 
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  ion-searchbar {
-    width: 400px;
-    text-align: left;
-}
-//botones;
 
-.center-buttons {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px; /* Agrega margen superior si es necesario */
-  }
 //LAS PIPES=
-
 td{
     font-size: 40px;
 }
