--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.html
@@ -46,7 +46,7 @@
           <ion-item>
             <ion-label position="floating">Precio:</ion-label>
             <ion-input type="number" name="precioP" min="1000" required [(ngModel)]="precioPValue"
-              #precioPModel="ngModel" (input)="validatePrecio(precioPValue)"></ion-input>
+              #precioPModel="ngModel" (input)="limitarLongitudPrecio($event); validatePrecio(precioPValue)"></ion-input>
           </ion-item>
           <div class="error-message" *ngIf="!precioPModel.valid && (precioPModel.dirty || precioPModel.touched)">
             <p *ngIf="precioPModel.errors?.['required']">El precio del producto es obligatorio.</p>
