--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -9,16 +9,27 @@
     <ion-card class="custom-card">
       <img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="" class="card-image">
       <ion-card-content class="card-content">
-        <ion-card-title class="titulo" style="font-size: 30px;">Audifonos gamers negro con naranja</ion-card-title>
+        <ion-card-title class="titulo" style="font-size: 25px;">Audifonos gamers negro con naranja</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
         <p>Cantidad: 2 </p>
-        <ion-button shape="round" color="medium">+</ion-button><ion-button shape="round" color="medium">-</ion-button>
+        <ion-button class="btn" shape="round" color="medium">+</ion-button><ion-button class="btn" shape="round" color="medium">-</ion-button>
         <br>
-        <ion-button [routerLink]="['/carrito']">Finalizar compra</ion-button>
-        <ion-button color="danger">eliminar productos</ion-button>
-
       </ion-card-content>
     </ion-card>
   </div>
+  <!--ESTO ES DE LA COMPRA FINAL-->
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <ion-card-content class="card-content">
+        <ion-card-title style="font-size: 25px;">Total</ion-card-title>
+        <p class="subti"  style="font-size: 20px;">$70.000</p>
+        <!--BOTONES-->
+        <ion-button color="danger"><ion-icon name="trash-bin-outline"></ion-icon></ion-button><ion-button [routerLink]="['/carrito']">Finalizar compra</ion-button>
+        <!---->
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <br><br><br>
+  <app-componente2></app-componente2>
 </ion-content>
