--- a/src/app/pages/Shop/carrito/carrito.page.scss
+++ b/src/app/pages/Shop/carrito/carrito.page.scss
@@ -16,7 +16,7 @@
 .card-image {
     width: 100%;
     /* Aumenta aún más el ancho de la imagen */
-    max-width: 250px;
+    max-width: 320px;
     object-fit: cover;
 }
 
@@ -59,15 +59,16 @@ p {
 
     
 
-@media (max-width: 425px) {
+@media (width: 425px) or (width: 412px) {
+    .btn{
+        font-size: 25px;
+    }
     .custom-card {
         align-items: center;
         /* Mantiene el contenido centrado verticalmente en pantallas grandes */
-        justify-content: space-between;
-        /* Distribuye el contenido en el eje horizontal */
         flex-direction: column;
         /* Coloca el contenido en fila */
-        width: 65%;
+        width: 150%;
     }
 
     .card-content {
@@ -75,56 +76,33 @@ p {
         /* Vuelve al alineamiento a la izquierda en pantallas más grandes */
         flex: 1;
         /* Ocupa el espacio restante */
-        padding: 25px;
+        padding: 20px;
         /* Agrega un poco de espacio alrededor del contenido */
     }
 
     .card-image {
         width: 100%;
         /* Aumenta aún más el ancho de la imagen */
-        max-width: 550px;
+        max-width: 650px;
         object-fit: cover;
     }
     .titulo{
-        font-size: 15px;
+        color: white;
+        font-family: 'DM Serif Display', serif;
+        font-size: 55px;
         text-align: left;
+        margin: 5px;
     }
+    
     p{
-        font-size: 15px;
+        font-size: 20px;
     }
     .subti{
-        font-size: 13px;
+        font-size: 1opx;
     }
     
 }
+//FONDO 
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
-}
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  ion-searchbar {
-    width: 400px;
-    text-align: left;
 }
