--- a/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
+++ b/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
@@ -66,7 +66,6 @@
               <ion-select-option>Reloj analógico</ion-select-option>
               <ion-select-option>Audífono bluetooth</ion-select-option>
               <ion-select-option>Audífono gamer</ion-select-option>
-              <ion-select-option>Audífonos deportivos</ion-select-option>
             </ion-select>
           </ion-item>
           <div class="error-message"
@@ -92,5 +91,6 @@
       </ion-card-content>
     </ion-card>
   </div>
+  <app-componente2></app-componente2>
 
 </ion-content>
