--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -33,7 +33,7 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>rojos con negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ag3']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ag3']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -45,7 +45,7 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>negro con naranja</ion-card-title>
           <ion-card-content>
             <td>{{ dinero2 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ag4']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ag4']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -57,7 +57,7 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>lila con blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero3 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ag5']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ag5']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -74,7 +74,7 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
             <td>{{ dinero4 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ai1']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ai1']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -86,7 +86,7 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero5 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ai4']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ai4']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -98,7 +98,7 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
           <ion-card-content>
             <td>{{ dinero6 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/ai6']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/ai6']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -116,7 +116,7 @@
           <ion-card-title class="ion-title">Reloj Analógico<br>negro con azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero7 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/r3']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/r3']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -128,7 +128,7 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>negro fondo azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero8 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/r4']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/r4']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -140,7 +140,7 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>amarillo con negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero9 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/r5']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/r5']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -158,7 +158,7 @@
           <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero10 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rd2']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/rd2']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -170,7 +170,7 @@
           <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero11 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rd5']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/rd5']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -182,7 +182,7 @@
           <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero12 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rd6']">Ver detalles</ion-button>
+            <ion-button  color="dark" [routerLink]="['/rd6']">Ver detalles</ion-button>
             <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
           </ion-card-content>
         </ion-card-header>
@@ -201,7 +201,7 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
             <ion-card-content>
               <td>{{ dinero13 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rs1']">Ver detalles</ion-button>
+              <ion-button  color="dark" [routerLink]="['/rs1']">Ver detalles</ion-button>
               <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
@@ -215,7 +215,7 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero14 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rs3']">Ver detalles</ion-button>
+              <ion-button  color="dark" [routerLink]="['/rs3']">Ver detalles</ion-button>
               <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
@@ -229,7 +229,7 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero15 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button *ngIf="rol == 1" color="dark" [routerLink]="['/rs5']">Ver detalles</ion-button>
+              <ion-button  color="dark" [routerLink]="['/rs5']">Ver detalles</ion-button>
               <ion-button *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
             </ion-card-content>
           </ion-card-header>
