--- a/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
+++ b/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.html
@@ -70,7 +70,7 @@
           </ion-item>
           <div class="error-message"
             *ngIf="categoriaPModel.invalid && (categoriaPModel.dirty || categoriaPModel.touched)">
-            <p *ngIf="categoriaPModel.errors?.['required']">La categoría del producto es obligatoria.</p>
+            <p *ngIf="categoriaPModel.errors?.['required']">La categoría es obligatoria.</p>
           </div>
 
           <ion-item>
