--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -11,16 +11,15 @@
           <br>
           <p class="subti" style="font-size: 25px;">Precio: $50.000</p>
           <p class="subti">Descripción:</p>
-          <p>Estos auriculares gamer rojos ofrecen un diseño
-            llamativo y audaz. Con una apariencia elegante
-            resaltada por el color rojo, brindan un audio
-            inmersivo, comodidad con almohadillas suaves y
-            ajuste ergonómico. Perfectos para jugadores que
-            buscan estilo y rendimiento en un solo paquete.</p>
+          <p>Auriculares gamer rojos con diseño llamativo y 
+            elegante, brindando sonido inmersivo y comodidad 
+            con almohadillas suaves, perfectos para jugadores
+             que buscan estilo y rendimiento en uno.</p>
           <br>
           <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
 
         </ion-card-content>
       </ion-card>
     </div>
+    <app-componente2></app-componente2>
   </ion-content>
