--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
@@ -1,30 +1,6 @@
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
   ion-searchbar {
     width: 400px;
     text-align: left;
@@ -65,13 +41,17 @@ ion-card-title {
 }
 
 //cuando este pequeña la pantalla:
-@media(width:320px) {
+@media(width:412px) or (width: 425px) or (width: 389px){
   ion-card {
-    height: 700px;
-    width: 500px;
+    margin: auto 50px;
+    height: 770px;
+    width: 600px;
     background: #222222;
   }
-
+  ion-card-title{
+    font-size: 25px;
+    justify-content: center;
+  }
 }
 
 
