--- a/src/app/pages/categoria/reloj-ana/reloj-ana.page.scss
+++ b/src/app/pages/categoria/reloj-ana/reloj-ana.page.scss
@@ -61,7 +61,7 @@ ion-card-title {
     text-align: center;
     margin: 5px;
 }
-@media(width:425px) or (width:412px){
+@media(width:412px) or (width: 425px) or (width: 389px){
     ion-card-title{
         font-size: 40px;
     }
