--- a/src/app/pages/inicio/datos-personales/datos-personales.page.scss
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.scss
@@ -2,34 +2,6 @@
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  ion-searchbar {
-    width: 400px;
-    text-align: left;
-}
 //
 ion-img {
     width: 300px;
@@ -37,6 +9,7 @@ ion-img {
 }
 
 ion-card {
+    border-radius: 16px;
     background-color: #222222;
     width: fit-content;
     height: max-content;
@@ -96,7 +69,7 @@ ion-card-title {
     text-align: center;
     margin: 5px;
 }
-@media(width:423px){
+@media(width:412px) or (width: 425px) or (width: 389px){
     ion-title{
         font-size: 40px;
     }
