--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
@@ -23,8 +23,8 @@ ion-card {
   align-items: center;
   justify-content: center;
   height: 460px;
-  max-width: 400px;
-  margin: 25px auto;
+  max-width: 350px;
+  margin: 150px auto;
   border-radius: 20px;
   background: #222222;
 }
@@ -53,7 +53,7 @@ a{
   color: #797575;
 }
 //CUANDO SE PONGA PEQUEÑA LA PANTALLA
-@media(width:425px) {
+@media(width:412px) or (width: 425px) or (width: 389px) {
   ion-card {
     height: 500px;
     width: 400px;
