--- a/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
+++ b/src/app/pages/inicio/recuperar-clave/recuperar-clave.page.scss
@@ -33,7 +33,7 @@ ion-card {
   }
   
   //cuando este pequeña la pantalla:
-  @media(width:320px) {
+  @media(width:412px) or (width: 425px) or (width: 389px){
     ion-card {
       height: 450px;
       width: 500px;
