--- a/src/app/pages/productos/ag3/ag3.page.scss
+++ b/src/app/pages/productos/ag3/ag3.page.scss
@@ -59,7 +59,7 @@ p {
 
     
 
-@media (max-width: 464px) {
+@media(width:412px) or (width: 425px) or (width: 389px){
     .custom-card {
         align-items: center;
         /* Mantiene el contenido centrado verticalmente en pantallas grandes */
