ajustando a los telefonos

--- a/src/app/pages/Shop/carrito/carrito.page.scss
+++ b/src/app/pages/Shop/carrito/carrito.page.scss
@@ -59,7 +59,7 @@ p {
 
     
 
-@media(width:412px) or (width: 425px) or (width: 389px) {
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px){
     .btn{
         font-size: 25px;
     }
