--- a/src/app/pages/Shop/historial/historial.page.scss
+++ b/src/app/pages/Shop/historial/historial.page.scss
@@ -57,7 +57,7 @@ p {
     margin: 5px;
 }
 
-@media(width:412px) or (width: 425px) or (width: 389px){
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px){
     .custom-card {
         align-items: center;
         /* Mantiene el contenido centrado verticalmente en pantallas grandes */
