--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
@@ -41,7 +41,7 @@ ion-card-title {
 }
 
 //cuando este pequeña la pantalla:
-@media(width:412px) or (width: 425px) or (width: 389px){
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px){
   ion-card {
     margin: auto 50px;
     height: 770px;
