--- a/src/app/pages/inicio/datos-personales/datos-personales.page.scss
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.scss
@@ -69,7 +69,7 @@ ion-card-title {
     text-align: center;
     margin: 5px;
 }
-@media(width:412px) or (width: 425px) or (width: 389px){
+@media ((width: 412px) or (width: 425px) or (width: 384px)) and (height: 857px){
     ion-title{
         font-size: 40px;
     }
