VALIDACIONES YA HECHAS

--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -36,7 +36,7 @@
             <br>
 
             <ion-input label="Correo electrónico:" type="email" label-placement="floating" required readonly
-              fill="outline" placeholder="profeponga7@gmail.com" [value]="correoEnviado"></ion-input>
+              fill="outline" placeholder="profeponga7@gmail.com" [value]="emailEnviado"></ion-input>
             <br>
             <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" [value]="rutEnviado" required readonly
               placeholder="26.098.098-2"></ion-input>
